--- a/src/app/assign-equipment/assign-equipment.component.html
+++ b/src/app/assign-equipment/assign-equipment.component.html
@@ -3,10 +3,10 @@
     <mat-card>
       <form #assignEqForm="ngForm" (ngSubmit)="save(assignEqForm.value)">
         <mat-card-header class="t-header">
-          <mat-card-title><h1>{{assignEquip.id ? 'EDIT' : 'ADD'}} PERSONAL TO ASSIGN EQUIPMENT</h1></mat-card-title>
+          <mat-card-title><h1>{{assignEquip.id ? 'EDITAR' : 'AÑADIR'}} PERSONAL PARA ASIGNACIÓN DE EQUIPOS</h1></mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <div class="fieldRow">
+          <!--<div class="fieldRow">
             <input type="hidden" name="id" [(ngModel)]="assignEquip.id">
             <mat-form-field>
               <mat-select placeholder="Supervisor" [(ngModel)]="assignEquip.idSupervisor" name="idSupervisor" #idSupervisor="ngModel" required>
@@ -16,8 +16,9 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-          </div>
+          </div>-->
           <div class="fieldRow">
+            <input type="hidden" name="id" [(ngModel)]="assignEquip.id">
             <mat-form-field>
               <mat-select placeholder="Employee" [(ngModel)]="assignEquip.idEmployee" name="idEmployee" #idEmployee="ngModel" required>
                 <mat-option>None</mat-option>
@@ -42,9 +43,11 @@
         </mat-card-content>
         <mat-card-actions>
           <button mat-raised-button color="primary" type="submit"
-                  [disabled]="!assignEqForm.form.valid">Save</button>
+                  [disabled]="!assignEqForm.form.valid">Guardar</button>
+          <button mat-raised-button (click)="remove(assignEquip.id)" color="secondary"
+                  *ngIf="assignEquip.id" type="button">Eliminar</button>
           <button mat-raised-button (click)="gotoList()" color="secondary"
-                  type="button">Cancel</button>
+                  type="button">Cancelar</button>
         </mat-card-actions>
       </form>
     </mat-card>
