--- a/src/app/position-list/position-list.component.html
+++ b/src/app/position-list/position-list.component.html
@@ -18,7 +18,7 @@
         <div class="numberList" ><h3 mat-line >{{position.id}}</h3></div>
         <div class="descriptionList">
           <h3 mat-line>
-          <a mat-button [routerLink]="['/position-edit', position.id]">{{position.name}}</a>
+          <a mat-button [routerLink]="['/position-edit', position.id]" id="btn-edit">{{position.name}}</a>
         </h3>
         </div>
         <div class="descriptionList">
@@ -36,5 +36,5 @@
       </mat-list-item>
     </mat-list>
   </mat-card-content>
-  <button mat-raised-button color="primary" [routerLink]="['/position-add']">Add</button>
+  <button id="btn-create" mat-raised-button color="primary" [routerLink]="['/position-add']">Add</button>
 </mat-card>
