to correct "id"

--- a/src/app/accident-add-component/accident-add-component.component.html
+++ b/src/app/accident-add-component/accident-add-component.component.html
@@ -7,38 +7,38 @@
 
     <div class="form">
       <mat-form-field color="primary">
-        <textarea matInput #input class="form-control" placeholder="Titulo Accidente" [(ngModel)]="data.nameAccidentado" name="nameAccidentado" required ></textarea>
+        <textarea matInput #input class="form-control" placeholder="Titulo Accidente" [(ngModel)]="data.nameAccidentado" id="nameAccidentado"  required ></textarea>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="primary">
-        <input matInput #inputstate class="form-control" placeholder="place_accident" [(ngModel)]="data.place_accident" name="place_accident" required >
+        <input matInput #inputstate class="form-control" placeholder="place_accident" [(ngModel)]="data.place_accident" id="place_accident" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
     <div class="form">
       <mat-form-field color="primary">
-        <input matInput #inputstate class="form-control" placeholder="gravity_accident" [(ngModel)]="data.gravity_accident" name="gravity_accident" required >
+        <input matInput #inputstate class="form-control" placeholder="gravity_accident" [(ngModel)]="data.gravity_accident" id="gravity_accident" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
     <div class="form">
       <mat-form-field color="primary">
-        <input matInput #inputstate class="form-control" placeholder="description_accident" [(ngModel)]="data.description_accident" name="description_accident" required >
+        <input matInput #inputstate class="form-control" placeholder="description_accident" [(ngModel)]="data.description_accident" id="description_accident" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
     <div class="form">
       <mat-form-field color="primary">
-        <input matInput #inputstate class="form-control" placeholder="date_accident" [(ngModel)]="data.date_accident" name="date_accident" required >
+        <input matInput #inputstate class="form-control" placeholder="date_accident" [(ngModel)]="data.date_accident" id="date_accident" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
     <div class="form">
       <mat-form-field color="primary">
-        <input matInput #inputstate class="form-control" placeholder="hour_accident" [(ngModel)]="data.hour_accident" name="hour_accident" required >
+        <input matInput #inputstate class="form-control" placeholder="hour_accident" [(ngModel)]="data.hour_accident" id="hour_accident" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -47,7 +47,7 @@
 
     <div class="form">
       <mat-form-field>
-        <mat-select placeholder="Seleccionar  Tipo de Accidente" [(ngModel)]="data.accidentTypeId" name="accidentTypeId">
+        <mat-select placeholder="Seleccionar  Tipo de Accidente" [(ngModel)]="data.accidentTypeId" id="accidentTypeId">
           <mat-option *ngFor="let tipo of accidentTypes" [value]="tipo.id">
             {{tipo.name_type_accident}}
           </mat-option>
@@ -57,7 +57,7 @@
 
     <div class="form">
       <mat-form-field>
-        <mat-select placeholder="Seleccionar Area" [(ngModel)]="data.areaId" name="areaId">
+        <mat-select placeholder="Seleccionar Area" [(ngModel)]="data.areaId" id="areaId">
           <mat-option *ngFor="let area of areas" [value]="area.id">
             {{area.name}}
           </mat-option>
@@ -66,7 +66,7 @@
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
+      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" id = "registrar"(click)="confirmAdd()">Save</button>
       <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
   </form>
