--- a/src/app/accident-list/accident-list.component.html
+++ b/src/app/accident-list/accident-list.component.html
@@ -19,7 +19,7 @@
   <mat-toolbar>
     <span>Accidentes </span>
     <button  (click)="addNew()">
-      <i class="fa fa-plus"></i> AGREGAR ACCIDENTE
+      <i class="fa fa-plus" id="AGREGAR_ACCIDENTE" ></i> AGREGAR ACCIDENTE
     </button>
     <span class="spacer"></span>
 
