--- a/src/app/accident-type/accident-type.component.html
+++ b/src/app/accident-type/accident-type.component.html
@@ -44,7 +44,7 @@
         <button type="button" class="btn btn-default" id="adv-cancel"><span
           class="glyphicon glyphicon-chevron-left"></span>Cancel
         </button>
-        <button type="submit" class="btn btn-success" [disabled]="isInvalidForm()">Submit</button>
+        <button type="submit" class="btn btn-success" [disabled]="isInvalidForm()" id="editar">Submit</button>
       </div>
   </div>
 </div>
